[package]
name = "gitversion"
description = "Semantic Versioning for Git projects"
version = "0.0.4"

keywords = ["git", "version", "semver", "semantic", "versioning"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Omid Rad <omidmr@gmail.com>"]
repository = "https://github.com/omid/gitversion"
readme = "README.md"

license = "MIT"

[dependencies]
git2 = "0.8.0"
semver = "0.9.0"
natord = "1.0.9"
regex = "1.2.1"

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]
