[package]
name = "gitversion"
description = "Semantic Versioning for Git projects"
version = "0.1.0"

edition = "2018"
keywords = ["git", "version", "semver", "semantic", "versioning"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Omid Rad <omidmr@gmail.com>"]
repository = "https://github.com/omid/gitversion"
readme = "README.md"
license = "MIT"

[dependencies]
git2 = "0.11"
semver = "0.9"
natord = "1.0"
regex = "1.3"
clap = { version = "2.33", features = ["yaml"] }
